css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Roboto", sans-serif;
}

.white {
    color: white;
}

.grey {
    color: gray;
    font-size: small;
}

.container {
    display: flex;
    height: calc(100vh - 100px);
}


/* sidebara */


.sidebar {
    display: flex;
    flex-direction: column;
    background-color: black;
    justify-content: space-between;
    font-size: small;
    padding: 10px;
    flex-basis: 250px;
    flex-shrink: 0;
    max-height: 100%;
}

.wrapper {
    display: flex;
    flex-direction: column;
}

.logo {
    width: 100px;
    padding-bottom: 20px
}

.container-svg {
    display: flex;
    align-items: center;
    padding: 5px 0;
    max-height: 35px;
}

.svg {
    width: 25px;
}

li {
    padding-bottom: 15px;
    list-style: none;
}

.align {
    display: flex;
    align-items: center;
}

.fa-plus {
    color: black;
    background-color: grey;
    font-size: xx-large;
    margin-right: 10px;
}


/* contenuto a destra */


.container-desta {
    flex-grow: 1;
    overflow: auto;
    max-height: 100%;
}

header {
    background-color: #0C0D0F;
    display: flex;
    justify-content: right;
    align-items: center;
    height: 80px;
    position: sticky;
    top: 0;
}

.button {
    padding: 10px;
    border-radius: 200px;
    border: 2px solid white;
}

.nav-bar {
    text-align: center;
    padding: 20px 0;
}

.nav-text {
    padding: 0 5px;
}

h2 {
    padding: 5px 0;
}

.container-brani {
    display: flex;
    gap: 10px;
    padding: 20px 0;
}

.brani {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: calc(100% / 6 - 50px / 5);
}

.q {
    width: calc(100% / 2 - 20px / 2);
}

img {
    width: 150px;
}

.autori {
    border-radius: 1000px;
}

h4 {
    padding: 10px 0;
}

footer {
    background-color: #2A2630;
    height: 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
}

.container-canzone {
    display: flex;
    align-items: center;
    gap: 10px;
}

.img-sinister-footer {
    width: 50px;
    margin-right: 10px;
}

.nome-sinister-footer {
    margin-right: 50px;
}

.top {
    display: flex;
}

.play-buttons {
    gap: 20px;
    display: flex;
    align-items: center;
}

.fa-circle-play {
    font-size: xx-large;
}

.timeline {
    display: flex;
    justify-content: space-between;
}








/* debug */


.sub-container {
    max-width: 320px;
}


.overflow {
    background-color: #161928;
    padding: 0 20px;
}

